--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Cantarell, Roboto, Helvetica, Arial, sans-serif;
+    font-family: Cantarell, Roboto, Helvetica, Arial, "Font Awesome 5 Free";
     font-size: 13px;
     min-height: 0;
 }
