--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,9 +2,9 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Cantarell, Roboto, Helvetica, Arial, "Font Awesome 5 Free";
+    font-family: Inter, Cantarell, Roboto, Helvetica, Arial, "Font Awesome 5 Free";
     font-size: 13px;
-    min-height: 0;
+    min-height: 26px;
 }
 
 window#waybar {
@@ -19,24 +19,28 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
+/* window#waybar.solo {
+    background-color: #FFFFFF;
+} */
+
 #workspaces button {
-    border-radius: 4px;
+    border-radius: 8px;
     padding: 0 5px;
     background-color: transparent;
     color: #ffffff;
     /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
+    /* box-shadow: inset 0 -3px transparent; */
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
+    /* box-shadow: inset 0 -3px #ffffff; */
 }
 
 #workspaces button.focused {
     background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -2px #434d53;
 }
 
 #workspaces button.urgent {
@@ -45,7 +49,7 @@ window#waybar.hidden {
 
 #mode {
     background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    /* border-bottom: 3px solid #ffffff; */
 }
 
 #clock,
@@ -62,12 +66,15 @@ window#waybar.hidden {
 #mode,
 #idle_inhibitor,
 #mpd,
+#keyboard-state,
 #custom-power,
 #custom-launcher {
-    border-radius: 4px;
+    border-radius: 8px;
     padding: 0 10px;
     margin: 0 4px;
-    color: #ffffff;
+    color: #121116;
+    background-color: #dc9b99;
+    box-shadow: inset 0 -2px rgb(155, 110, 109);
 }
 
 #window,
@@ -85,7 +92,13 @@ window#waybar.hidden {
     margin-right: 0;
 }
 
-#clock {
+#custom-power {
+    color: white;
+    background-color: transparent;
+    box-shadow: none;
+}
+
+/* #clock {
     background-color: #64727D;
 }
 
@@ -97,7 +110,7 @@ window#waybar.hidden {
 #battery.charging, #battery.plugged {
     color: #ffffff;
     background-color: #26A65B;
-}
+} */
 
 @keyframes blink {
     to {
@@ -119,7 +132,7 @@ window#waybar.hidden {
 label:focus {
     background-color: #000000;
 }
-
+/* 
 #cpu {
     background-color: #2ecc71;
     color: #000000;
@@ -175,10 +188,11 @@ label:focus {
 
 #temperature.critical {
     background-color: #eb4d4b;
-}
+} */
 
 #tray {
-    background-color: #212121;
+    background-color: rgba(0, 0, 0, 0.3);
+    box-shadow: none;
 }
 
 #tray > .passive {
@@ -225,7 +239,7 @@ label:focus {
 }
 
 #keyboard-state {
-    background: #97e1ad;
+    /* background: #97e1ad; */
     color: #000000;
     padding: 0 0px;
     margin: 0 5px;
@@ -237,5 +251,6 @@ label:focus {
 }
 
 #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
