--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,14 +2,13 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Inter, Cantarell, Roboto, Helvetica, Arial, "Font Awesome 5 Free";
+    font-family: Cantarell, Roboto, Helvetica, Arial, "Font Awesome 5 Free";
     font-size: 13px;
-    min-height: 26px;
+    min-height: 28px;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.0);
-    /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
+    background-color: rgba(0, 0, 0, 1.0);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
@@ -19,28 +18,20 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
-/* window#waybar.solo {
-    background-color: #FFFFFF;
-} */
-
 #workspaces button {
-    border-radius: 8px;
     padding: 0 5px;
     background-color: transparent;
     color: #ffffff;
-    /* Use box-shadow instead of border so the text isn't offset */
-    /* box-shadow: inset 0 -3px transparent; */
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    /* box-shadow: inset 0 -3px #ffffff; */
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -2px #434d53;
+    background-color: #525252;
+    /* box-shadow: inset 0 -2px #292929; */
 }
 
 #workspaces button.urgent {
@@ -49,7 +40,6 @@ window#waybar.hidden {
 
 #mode {
     background-color: #64727D;
-    /* border-bottom: 3px solid #ffffff; */
 }
 
 #clock,
@@ -69,12 +59,7 @@ window#waybar.hidden {
 #keyboard-state,
 #custom-power,
 #custom-launcher {
-    border-radius: 8px;
     padding: 0 10px;
-    margin: 0 4px;
-    color: #121116;
-    background-color: #dc9b99;
-    box-shadow: inset 0 -2px rgb(155, 110, 109);
 }
 
 #window,
@@ -98,20 +83,6 @@ window#waybar.hidden {
     box-shadow: none;
 }
 
-/* #clock {
-    background-color: #64727D;
-}
-
-#battery {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
-} */
-
 @keyframes blink {
     to {
         background-color: #ffffff;
@@ -132,66 +103,9 @@ window#waybar.hidden {
 label:focus {
     background-color: #000000;
 }
-/* 
-#cpu {
-    background-color: #2ecc71;
-    color: #000000;
-}
-
-#memory {
-    background-color: #9b59b6;
-}
-
-#disk {
-    background-color: #964B00;
-}
-
-#backlight {
-    background-color: #90b1b1;
-}
-
-#network {
-    background-color: #2980b9;
-}
-
-#network.disconnected {
-    background-color: #f53c3c;
-}
-
-#pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
-}
-
-#pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
-}
-
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
-
-#temperature {
-    background-color: #f0932b;
-}
-
-#temperature.critical {
-    background-color: #eb4d4b;
-} */
 
 #tray {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(24, 24, 24, 1.0);
     box-shadow: none;
 }
 
@@ -239,7 +153,6 @@ label:focus {
 }
 
 #keyboard-state {
-    /* background: #97e1ad; */
     color: #000000;
     padding: 0 0px;
     margin: 0 5px;
