--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -19,19 +19,19 @@ window#waybar.hidden {
 }
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 0 8px;
     background-color: transparent;
     color: #ffffff;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(92, 92, 92, 0.5);
 }
 
 #workspaces button.focused {
-    background-color: #525252;
-    /* box-shadow: inset 0 -2px #292929; */
+    /* background-color: #525252; */
+    box-shadow: inset 0 2px #a8a8a8;
 }
 
 #workspaces button.urgent {
@@ -105,8 +105,8 @@ label:focus {
 }
 
 #tray {
-    background-color: rgba(24, 24, 24, 1.0);
-    box-shadow: none;
+    background-color: rgba(30, 30, 30, 1.0);
+    /* box-shadow: inset 1 0px #a8a8a8; */
 }
 
 #tray > .passive {
