--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,17 +2,18 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Iosevka Aile, Roboto, Helvetica, Arial, "Font Awesome 5 Free";
-    font-size: 12px;
-    /* font-weight: bold; */
-    min-height: 28px;
+    font-family: Inter, "Font Awesome 5 Free", Iosevka Aile, Roboto, Helvetica, Arial;
+    font-size: 13px;
+    font-weight: 500;
+    /* min-height: 24px; */
+    padding: 1px 1px;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 1.0);
+    background-color: rgba(0, 0, 0, 0);
     color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+    /* transition-property: background-color;
+    transition-duration: .5s; */
 }
 
 window#waybar.hidden {
@@ -20,9 +21,9 @@ window#waybar.hidden {
 }
 
 #workspaces button {
-    padding: 0 8px;
     background-color: transparent;
     color: #ffffff;
+    border-radius: 6px;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
@@ -31,8 +32,8 @@ window#waybar.hidden {
 }
 
 #workspaces button.focused {
-    /* background-color: #525252; */
-    box-shadow: inset 0 2px #a8a8a8;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* box-shadow: inset 0 2px #a8a8a8; */
 }
 
 #workspaces button.urgent {
@@ -60,29 +61,29 @@ window#waybar.hidden {
 #keyboard-state,
 #custom-power,
 #custom-launcher {
-    padding: 0 10px;
+    padding: 0 12px;
 }
 
-#window,
+/* #window,
 #workspaces {
     margin: 0 4px;
+} */
+
+.modules-right {
+    border-radius: 6px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 1px 1px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
+/* .modules-left > widget:first-child > #workspaces {
     margin-left: 0;
-}
+} */
 
 /* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
+/* .modules-right > widget:last-child > #workspaces {
     margin-right: 0;
-}
-
-#custom-power {
-    color: white;
-    background-color: transparent;
-    box-shadow: none;
-}
+} */
 
 @keyframes blink {
     to {
@@ -105,10 +106,10 @@ label:focus {
     background-color: #000000;
 }
 
-#tray {
+/* #tray {
     background-color: rgba(30, 30, 30, 1.0);
-    /* box-shadow: inset 1 0px #a8a8a8; */
-}
+    box-shadow: inset 1 0px #a8a8a8;
+} */
 
 #tray > .passive {
     -gtk-icon-effect: dim;
@@ -117,54 +118,4 @@ label:focus {
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
     background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-    background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
-}
-
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-}
-
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state {
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-    border-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.2);
 }
