--- a/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
@@ -6,8 +6,13 @@ set -o pipefail
 
 sudo apt update
 sudo apt upgrade -y
-sudo apt install -y {{ range .packages.general.apt -}} {{ . }} {{ end -}}
+sudo apt install -y {{ range .packages.general.apt }} {{ . }} {{ end }}
 
-{{- if eq .machine "work" }}
-sudo apt install -y {{ range .packages.work.apt -}} {{ . }} {{ end -}}
-{{- end }}
+{{ if eq .machine "work" }}
+sudo add-apt-repository -y ppa:dotnet/backports
+sudo apt install -y {{ range .packages.work.apt }} {{ . }} {{ end }}
+
+{{ range .packages.work.dotnet }}
+dotnet tool install -g {{ . }}
+{{ end }}
+{{ end }}
