--- a/.chezmoiscripts/run_onchange_install-uv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-uv.sh.tmpl
@@ -6,3 +6,7 @@ set -o pipefail
 
 curl -LsSf https://astral.sh/uv/install.sh | sh
 uv self update
+
+{{ range .packages.general.python }}
+uv tool install {{ . }}
+{{ end }}
