--- a/.chezmoiscripts/run_onchange_install-rust.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-rust.sh.tmpl
@@ -10,3 +10,5 @@ sudo apt install -y rustup
 
 rustup toolchain install stable
 rustup update
+
+cargo install --locked {{ range .packages.general.cargo }} {{ . }} {{ end }}
