--- a/.chezmoiscripts/run_onchange_install-uv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-uv.sh.tmpl
@@ -7,6 +7,6 @@ set -o pipefail
 curl -LsSf https://astral.sh/uv/install.sh | sh
 uv self update
 
-{{ range .packages.general.python }}
+{{ range .packages.general.pip }}
 uv tool install {{ . }}
 {{ end }}
