--- a/dot_dotfiles/aliases.bash.tmpl
+++ b/dot_dotfiles/aliases.bash.tmpl
@@ -5,6 +5,8 @@ alias cmed='code $(cm source-path)'
 alias cmup='chezmoi git add . && chezmoi git -- commit -m "update dotfiles" && chezmoi git push'
 {{ end }}
 
+alias bat='batcat'
+
 # Delete all local branches (other than the primary ones). Other branches can
 # also be ignored, if added to the `grep` expression.
 alias git-clean-local='git branch | grep -v -E "main|master|dev|develop" | xargs git branch -D'
@@ -12,7 +14,7 @@ alias git-clean-local='git branch | grep -v -E "main|master|dev|develop" | xargs
 alias git-prune-old='git remote prune origin'
 
 # Use `ls` with sensible defaults.
-alias lls='LC_COLLATE="C" ls -hal --group-directories-first'
+alias lls='LC_COLLATE="C" ls -l --almost-all --classify --group-directories-first --human-readable'
 
 # Change to the selected directory inside `ranger` when exiting.
 alias rcd='ranger --choosedir=$HOME/.rangerdir; LASTDIR=`cat $HOME/.rangerdir`; cd "$LASTDIR"'
