--- a/.chezmoiscripts/run_onchange_install-uv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-uv.sh.tmpl
@@ -5,8 +5,9 @@ set -o nounset
 set -o pipefail
 
 curl -LsSf https://astral.sh/uv/install.sh | sh
-uv self update
+
+$HOME/.local/bin/uv self update
 
 {{ range .packages.general.pip }}
-uv tool install {{ . }}
+$HOME/.local/bin/uv tool install {{ . }}
 {{ end }}
