--- a/.chezmoiscripts/ubuntu/run_onchange_install-packages.sh.tmpl
+++ b/.chezmoiscripts/ubuntu/run_onchange_install-packages.sh.tmpl
@@ -4,6 +4,10 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ if ne .chezmoi.osRelease.id "ubuntu" }}
+return
+{{ end }}
+
 sudo apt update
 sudo apt upgrade -y
 sudo apt install -y {{ range .packages.general.apt }} {{ . }} {{ end }}
