--- a/.chezmoiscripts/fedora/run_onchange_install-packages.sh.tmpl
+++ b/.chezmoiscripts/fedora/run_onchange_install-packages.sh.tmpl
@@ -5,7 +5,7 @@ set -o nounset
 set -o pipefail
 
 {{ if ne .chezmoi.osRelease.id "fedora" }}
-return
+exit
 {{ end }}
 
 sudo dnf --assumeyes upgrade
