--- a/.chezmoiscripts/ubuntu/run_onchange_install-dotnet.sh.tmpl
+++ b/.chezmoiscripts/ubuntu/run_onchange_install-dotnet.sh.tmpl
@@ -5,7 +5,7 @@ set -o nounset
 set -o pipefail
 
 {{ if ne .chezmoi.osRelease.id "ubuntu" }}
-return
+exit
 {{ end }}
 
 {{ if eq .machine "work" }}
